@@ -113,6 +113,8 @@ Tests
 - Issue #21456: Skip two tests in test_urllib2net.py if _ssl module not
   present. Patch by Remi Pointel.
 
+- Issue #22770: Prevent some Tk segfaults on OS X when running gui tests.
+
 Build
 -----
 
